--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 <body>
     <main role="main" id="main">
+        <!-- wrap all content in <article> as this is an article on a specific topic -->
         <header>
-            <div class="header">
+            <div class="header"><!-- remove this div. Apply the styles directly to the h1 -->
                 <h1>Algonquin Provincial Park</h1>
             </div>
-            <h2>From Wikipedia, the free encyclopedia</h2>    
-            <div>
-                <p> <img src="./image/Algonquin_Cache_Lake_Lookout.jpg" alt="algonquin park"></p>
+            <h2>From Wikipedia, the free encyclopedia</h2><!-- this should be a <p> -->
+            <div><!-- this should be a <figure> -->
+                <p> <img src="./image/Algonquin_Cache_Lake_Lookout.jpg" alt="algonquin park"></p><!-- remove <p> around <img> -->
+                <!-- missing <figcaption> with caption text from PDF -->
             </div>
             <div class="content_text1">  
                 <p>
+                    <!--
+                    Use a <strong> here instead of a <a>.
+                    -->
                     <a class="content_text1 bold">Algonquin Provincial Park</a> is a provincial park located between Georgian Bay and the Ottawa River in Ontario, Canada, mostly within
                     the Unorganized South Part of Nipissing District. Established in 1893, it is the oldest provincial park in Canada.<a class="link" href="#">[1]</a> Additions since its creation have increased the park to its current size of about 7,653 square kilometres (2,955 sq mi). The park is contiguous with several smaller, administratively
-                    separate provincial parks that protect important rivers in the area, resulting in a larger total protected area.<a class="link" href="!">[2]</a> 
+                    separate provincial parks that protect important rivers in the area, resulting in a larger total protected area.<a class="link" href="!">[2]</a>
                 </p>
                 <p class="content_text2">
                     Its size, combined with its proximity to the major urban centres of Toronto and Ottawa, makes Algonquin one of the most popular provincial parks in the province and the country. Highway 60 runs through the south end of the park, while the Trans-Canada Highway bypasses it to the north. Over 2,400 lakes and 1,200 kilometres of streams and rivers are located within the park. Some notable examples include Canoe Lake and the Petawawa, Nipissing, Amable du Fond, Madawaska, and Tim rivers. These were formed by the retreat of the <a href="@"> glaciers</a> during the last ice age.
@@ -29,11 +34,11 @@
             </div>
         </header>
         <section>
-            <div class="header">
-                <h1>Rivers</h1>
+            <div class="header"><!-- remove this div. Apply the styles directly to the h2 below -->
+                <h1>Rivers</h1><!-- this should be an h2. Only one h1 is allowed per page. Follow proper heading structure -->
             </div>
-            <h2>The park contains and protects the headwaters of these rivers:</h2>    
-            <ul class="content_text3">
+            <h2>The park contains and protects the headwaters of these rivers:</h2><!-- this should be a <p> -->
+            <ul class="content_text3"><!-- The list items are in alphabetical order, therefore should be in an <ol> ordered list. Use CSS to style as bullets -->
                 <li>Amable du Fond River</li>
                 <li>Barron River</li>
                 <li>Bonnechere River</li>
@@ -45,17 +50,20 @@
                 <li>York River</li>
             </ul>
         </section>
-        <section id="reference">
-                <div class="header">
-                    <h1>Reference</h1>
+        <section id="reference"><!-- A <footer> here would be more appropriate as it is the concluding footnote content -->
+                <div class="header"><!-- remove this div. Apply the styles directly to the h2 below -->
+                    <h1>Reference</h1><!-- this should be an h2. Only one h1 is allowed per page. Follow proper heading structure -->
                 </div>    
-                <div >
+                <div ><!-- make into <ol>. <ol> is for ordered list of multiple items in a specific order -->
+                    <!-- below .cite should be an <li> list item -->
                     <ol class="cite">1. <a class="ref" href="#"> "Le parc provincial Algonquin".</a> <em>Government of Ontario (in French).</em> 2009-11-02. Archived from the original on 2019-07-03. Retrieved 2019-07-03.</ol>
-                </div>
-                <div>
+                </div><!-- remove this line -->
+                <div><!-- remove this line -->
+                    <!-- below .cite should be an <li> list item -->
                     <ol class="cite">2. <a class="ref" href="&">"Frequently Asked Questions (FAQ's) | Algonquin Provincial Park | The Friends of Algonquin Park".</a>  <em>www.algonquinpark.on.ca.</em> Retrieved 2018-01-25.</ol>
-                </div>
+                </div><!-- make closing </ol> -->
         </section>
+        <!-- close </article> -->
     </main>
 </body>
 </html>
